# CT-dosing-errors

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Figures/: Paper_figures.ipynb  Stratification.ipynb
aidose/: __init__.py  constants.py
aidose/baselines/: CustomTrainer.py  DosingErrorDataset.py  LateFusionMultimodal.py  README.md  __init__.py  constants.py  construct_hyperparameter_search.py  main.py  our_clinicalModernBERT.py  our_xgboost.py  preprocessing.py  utils.py
aidose/ctgov/: __init__.py  api_download.py  constants.py  main.py  structures.py  utils.py  utils_download.py  utils_pdf.py  utils_protocol.py
aidose/dataset/: __init__.py  ade.py  ade_labeling.py  ade_manual_filtering.py  attribute.py  constants.py  export_for_challenge.py  export_for_paper.py  feature.py  feature_extraction.py  final_processing.py  main.py  meddra.py  split.py  utils.py
aidose/meddra/: __init__.py  constants.py  extraction.py  graph.py  main.py  utils.py
tests/ctgov/: test_feature.py  test_pdf_protocols.py  test_structures.py  test_token_stats.py  test_utils.py  test_utils_download.py  test_utils_pdf.py
tests/dataset/: test_ade.py  test_ade_labeling.py  test_ade_manual_filtering.py  test_attribute.py  test_dataset_utils.py  test_eda.py  test_extracted_docs_analysis.py  test_feature.py  test_feature_extraction.py  test_hf_hub_export_for_challenge.py  test_utils.py
tests/meddra/: test_extraction.py  test_graph.py  test_utils.py
