[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidose"
version = "1.3.1"
description = "A dataset for the prediction of dosing errors in interventional clinical trials using ML. This is part of the Inosuisse project AIDosE."
requires-python = ">=3.11"

dependencies = [
    "torch",
    "pydantic>=2.10.0",
    "datasets",
    "numpy",
    "scikit-learn",
    "xgboost",
    "transformers",
    "shap",
    "optuna",
    "pandas",
    "seaborn",
    "tqdm",
    "tensorboard",
    "matplotlib",
    "rapidfuzz",
    "statsmodels",
    "PyMuPDF",
    "pillow",
    "pypdfium2",
    "setuptools",
    "vllm>=0.11.2"
]


[tool.setuptools.packages.find]
include = ["aidose*"]
